[gd_scene load_steps=5 format=3 uid="uid://cgdf8veovle7r"]

[ext_resource type="Script" uid="uid://colt6ke7lcirr" path="res://addons/fancy_folder_colors/scene/color_picker.gd" id="1_3ys24"]

[sub_resource type="Gradient" id="Gradient_3ys24"]
interpolation_mode = 2
interpolation_color_space = 1
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.2, 0, 0, 1, 0, 0.2, 0, 1, 0, 0, 0.2, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y6el2"]
gradient = SubResource("Gradient_3ys24")
width = 512
height = 512
fill_from = Vector2(0, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0a7rr"]
texture = SubResource("GradientTexture2D_y6el2")

[node name="ColorPicker" type="Window"]
title = "Choose Color"
initial_position = 4
size = Vector2i(443, 656)
script = ExtResource("1_3ys24")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0a7rr")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VC" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="PanelContainer/MarginContainer/VC"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VC"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="accept" type="Button" parent="PanelContainer/MarginContainer/VC/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="remove" type="Button" parent="PanelContainer/MarginContainer/VC/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove"

[node name="cancel" type="Button" parent="PanelContainer/MarginContainer/VC/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel
"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="go_back_requested" from="." to="." method="_on_go_back_requested"]
[connection signal="color_changed" from="PanelContainer/MarginContainer/VC/ColorPicker" to="." method="_on_color_picker_color_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VC/HBoxContainer/accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VC/HBoxContainer/remove" to="." method="_on_remove_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VC/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
